No longer stop game when player disconnects and wait for them.

--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -46,6 +46,7 @@ html, body {
 
 .notification {
 	position: absolute;
+	display: none;
 	bottom: 0;
 	width: 100%;
 	background-color: $orange-trans;
