--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -220,7 +220,7 @@
 
 		// Get all absolutely-positioned elements
 		var outerAbsolutes = 
-		$('#wrapper :not(#gameContent *, #homeContent *, #stages-bar *, .modal, #bottom-bar, #background-logo *)')
+		$('#wrapper :not(#gameContent *, #homeContent *, #stages-bar *, .modal, .notification, #bottom-bar, #background-logo *)')
 		.filter(function(){
 		  return ($(this).css('position') == 'absolute');
 		});
