--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -135,6 +135,7 @@
 		'player:finished',
 		'player:agenda_item',
 		'player:assignrole',
+		'player:updatedata',
 
 		'game:error',
 		'game:tutorial',
@@ -348,7 +349,7 @@
 	    $('#overlay').hide();
 
 	    // Local session update 
-	    sessionStorage.setItem('phase', currentPhaseIndex);  
+	    // {{!-- sessionStorage.setItem('phase', currentPhaseIndex);   --}}
 
 	    // Analytics
 	    var phaseName = $('#stages-bar .icon:eq('+currentPhaseIndex+') span').text(),
@@ -370,8 +371,8 @@
 	        var newScreen = $('.screen:not(.skip)')[0];
 	        
 	        // Local session update
-	        sessionStorage.setItem('markup', $('#gameContent').html());   
-	        sessionStorage.setItem('screen', currentScreenIndex);
+	        // sessionStorage.setItem('markup', $('#gameContent').html());   
+	        // sessionStorage.setItem('screen', currentScreenIndex);
 
 	        $(newScreen).trigger('show');
 
