Bring player to correct screen index upon reconnect.

--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -126,7 +126,7 @@ var setupScreen = function(screenName, index) {
     sessionStorage.setItem('screenName', screenName);
 
     // Animate initial
-    screenOpen($('.screen:not(.skip):first'));
+    screenOpen($('.screen:not(.skip):eq(' + currentScreenIndex + ')'));
 
     phaseBarProgress();
 
