--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -164,7 +164,7 @@ phaseBarProgress = function() {
 */
 newGameHandler = function() {
 
-    $('#choices .btn').css('opacity', '1');
+    // $('#choices .btn').css('opacity', '1');
     
     /* 
      Get info for player when they ask to start new game
