Working reconnect button if player leaves and returns.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -5,7 +5,7 @@
     <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>@stake</title>
+        <title> {{env}}</title>
         <meta name="description" content="@stake is a role playing game that fosters creativity and empathy in small group deliberation.">
         <meta name="author" content="Engagement Lab at Emerson College">
         <meta name="theme-color" content="#00dcba">
