--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -139,6 +139,7 @@ var checkIfLoggedIn = function() {
 
             $('#btn_submit_rejoin').click(function() {
                 
+                isDecider = sessionStorage.getItem('isModerator');
                 socket = io('//{{host}}', {path: '/at-stake-socket', 'reconnection': true, 'reconnectionDelay': 500, 'maxReconnectionAttempts': Infinity});
                 registerEvents();
 
@@ -221,6 +222,7 @@ newGameHandler = function() {
                 _.each(data.code.split(''), function(char, i) {
                     gameCodeMarkup += '<span>' + char + '</span>';
                 });
+                sessionStorage.setItem('gameCode', data.code);
                 $('.access-code').html(gameCodeMarkup);
                 $('#gameContent').addClass('lobby');
 
@@ -254,6 +256,7 @@ $(document).on('click', '.btn.submit_name', function(evt) {
     }
 
     data.name = data.name.replace(' ','');
+    sessionStorage.setItem('username', data.name);
 
     $('#username').text(data.name);
 
