--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -65,7 +65,8 @@
       
       <div class="error">Error!</div>
       <button class="back-button" data-from="new" data-to="choices">back</button>
-      <input id="btn_submit" class="button_text game_login" type="submit" name="submit" value="next!">
+      <button id="btn_submit" class="button_text game_login">next</button>
+      {{!-- <input id="btn_submit" class="button_text game_login" type="submit" name="submit" value="next!"> --}}
     </div>
 
     <div class="waiting" style="display:none">
