--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -57,7 +57,6 @@ var playerLogin = function(data) {
     playerName = playerName.replace(' ','');
 
     sessionStorage.setItem('username', playerName);
-    sessionStorage.setItem('gameCode', gameCode);
 
     // Open socket connection
     if(!socket) { 
@@ -86,7 +85,7 @@ var checkIfLoggedIn = function() {
     }
     
     // Check if game code and uid saved to session (player is already logged in)
-    if(!sessionStorage.getItem('gameCode') && !sessionStorage.getItem('uUID')) {
+    if(!sessionStorage.getItem('gameCode')) {
         var isAndroid = /Android/ig.test(navigator.userAgent);
 
         $('.form.login').show();
@@ -222,7 +221,7 @@ newGameHandler = function() {
                 _.each(data.code.split(''), function(char, i) {
                     gameCodeMarkup += '<span>' + char + '</span>';
                 });
-                sessionStorage.setItem('gameCode', data.code);
+                
                 $('.access-code').html(gameCodeMarkup);
                 $('#gameContent').addClass('lobby');
 
