--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -620,6 +620,11 @@ socketEvents = function(eventId, eventData) {
                     return;
                 }
             }
+            else if(eventData === 'meetCountdown' && isDecider) {
+                socket.emit('game:next_player', emitData());
+                return;
+            }
+
             
             runMods();
             openInnerModal();
